DATACASS-1: WIP: still unsuccessfully trying to get past OOME in module spring-cassandra